fixed spacing errors on menu page

--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,11 @@
 #content {
-    gap: 20px;
     display: grid;
     height: 100vh;
-    padding: 20px;
     text-align: center;
+}
+
+#content.home-grid {
+    padding: 20px;
     justify-content: center;
     grid-template-rows: 2fr 1fr 0.5fr;
 }
@@ -46,4 +48,5 @@
 .title {
     font-weight: bold;
     grid-column: 1 / 3;
+    text-align: center;
 }
